feat: archivo user.db se crea correctamente

--- a/src/nginx/www/index.html
+++ b/src/nginx/www/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="index.css">
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-		<link rel="icon" href="../favicon/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
 		<title>Index</title>
 	</head>
 	<body>
@@ -13,13 +13,13 @@
 				<a href="./login/login.html">
 					<button>Iniciar sesión</button>
 				</a>
-				<a href="./register/register.html">
+				<a href="register.html">
 					<button>Registrarse</button>
 				</a>
 			</div>
 		</header>
 		<img src="unmatched.png" alt="Logo">
-		<h1>¡BIENVENIDO AL TORNEO UNMATCHED!</h1>
+		<h1>¡BIENVENIDO AL TORNEO DE UNMATCHED!</h1>
 		</div>
 	</body>
 </html>
