--- a/src/nginx/www/register.html
+++ b/src/nginx/www/register.html
@@ -4,21 +4,21 @@
 		<meta charset="UTF-8">
 		<title>Register</title>
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-		<link rel="icon" href="../favicon/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="register.css">
 		<script src="register.js" defer></script>
 	</head>
 	<body>
 		<header>
 			<div class="menu">
-				<a href="../login/login.html">
+				<a href="./login/login.html">
 					<button>¡Ya me acuerdo de quién soy!</button>
 				</a>
 			</div>
 		</header>
 		<div class="form-container">
 			<h1>Dime quién eres</h1>
-			<form action="../cgi-bin/register.php" method="post">
+			<form action="./cgi-bin/register.php" method="post">
 				<label for="user">¿Cómo te llamas?</label><br>
 				<input type="text" id="user" name="user" placeholder="Escribe tu usuario aquí"><br><br>
 				
