--- a/src/nginx/www/index.html
+++ b/src/nginx/www/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="menu">
-				<a href="./login/login.html">
+				<a href="login.html">
 					<button>Iniciar sesión</button>
 				</a>
 				<a href="register.html">
