actualizado todo antes de meterme con el php de register

--- a/src/nginx/www/login.html
+++ b/src/nginx/www/login.html
@@ -5,12 +5,12 @@
 		<title>Login</title>
 		<link rel="stylesheet" href="login.css">
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-		<link rel="icon" href="../favicon/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="./favicon/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<header>
 			<div class="menu">
-				<a href="../register/register.html">
+				<a href="/register.html">
 					<button>Aún no conocen mi leyenda...</button>
 				</a>
 			</div>
