--- a/src/nginx/www/register.html
+++ b/src/nginx/www/register.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<div class="menu">
-				<a href="./login/login.html">
+				<a href="/login.html">
 					<button>¡Ya me acuerdo de quién soy!</button>
 				</a>
 			</div>
