login preparado, pero falta el paso de un usuario correcto al portal

--- a/src/nginx/www/login.html
+++ b/src/nginx/www/login.html
@@ -16,7 +16,7 @@
 			</div>
 		</header>
 		<div class="image-container">
-			<img src="login.png" alt="login" class="left-img">
+			<img src="./img_src/login.png" alt="login" class="left-img">
 			<h1>¿Santo y seña?</h1>
 		</div>
 		<form action="/cgi-bin/login.php" method="post">
