--- a/src/nginx/www/index.html
+++ b/src/nginx/www/index.html
@@ -18,7 +18,7 @@
 				</a>
 			</div>
 		</header>
-		<img src="unmatched.png" alt="Logo">
+		<img src="./img_src/unmatched.png" alt="Logo">
 		<h1>¡BIENVENIDO AL TORNEO DE UNMATCHED!</h1>
 		</div>
 	</body>
