--- a/src/nginx/www/register.html
+++ b/src/nginx/www/register.html
@@ -30,7 +30,7 @@
 				
 				<button type="submit">Registrarse</button>
 			</form>
-			<img src="mirror.jpg" alt="Logo" class="background-img">
+			<img src="./img_src/mirror.jpg" alt="Logo" class="background-img">
 		</div>
 	</body>
 </html>
