Configuracion del usuario casi terminada

--- a/src/nginx/www/register.html
+++ b/src/nginx/www/register.html
@@ -18,7 +18,7 @@
 		</header>
 		<div class="form-container">
 			<h1>Dime quién eres</h1>
-			<form action="./cgi-bin/register.php" method="post">
+			<form action="./register.php" method="post">
 				<label for="user">¿Cómo te llamas?</label><br>
 				<input type="text" id="user" name="user" placeholder="Escribe tu usuario aquí"><br><br>
 				
